--- a/multi-stage-build/Dockerfile
+++ b/multi-stage-build/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14-alpine as builder
+FROM node:14-alpine as web
 
 COPY ./package.json .
 
@@ -12,4 +12,4 @@ FROM nginx
 
 COPY ./nginx.conf ./etc/nginx/conf.d/default.conf
 
-COPY --from=builder ./ /usr/share/nginx/html
+COPY --from=web ./ /usr/share/nginx/html
